testdata/not_valid/missing_semicolon_after_table.out
error: testdata/not_valid/missing_semicolon_after_table.kevs:1: scan: value does not end with semicolon
