testdata/not_valid/missing_semicolon_after_table.kevs
x = {a = "foo"; b = "bar";}
